# raccon_bot

./: .gitignore  README.md  __main__.py  pyproject.toml
app/config/: bot_setup_example.json  constants.py
app/libs/: bot.py
app/modules/: general.py
app/utils/: logger.py
